fix: overflow header issue for table devices

--- a/style.css
+++ b/style.css
@@ -195,6 +195,7 @@ footer .social-media-handles .icon:hover {
 
     main {
         position: relative;
+        overflow-x: hidden;
     }
 
     header {
